--- a/LiveKnock.vcproj
+++ b/LiveKnock.vcproj
@@ -69,6 +69,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\cpp\Ignition.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\cpp\LiveKnock.cpp"
 				>
 			</File>
