--- a/LiveKnock.vcproj
+++ b/LiveKnock.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="LiveKnock"
 	ProjectGUID="{AB9A6019-E9B2-45AE-83D4-26DD4067F158}"
 	RootNamespace="LiveKnock"
@@ -117,6 +117,10 @@
 				RelativePath=".\cpp\ML02.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\ida\ram_vars.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -153,6 +157,10 @@
 			</File>
 			<File
 				RelativePath=".\cpp\ram.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ida\ram_vars.h"
 				>
 			</File>
 			<File
