--- a/LiveKnock.vcproj
+++ b/LiveKnock.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="LiveKnock"
 	ProjectGUID="{AB9A6019-E9B2-45AE-83D4-26DD4067F158}"
 	RootNamespace="LiveKnock"
@@ -149,6 +149,10 @@
 			</File>
 			<File
 				RelativePath=".\cpp\ext_ram_vars.h"
+				>
+			</File>
+			<File
+				RelativePath=".\cpp\F500.h"
 				>
 			</File>
 			<File
