--- a/LiveKnock.vcproj
+++ b/LiveKnock.vcproj
@@ -77,6 +77,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\cpp\atu02_ici0A.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\cpp\BC06.cpp"
 				>
 			</File>
