--- a/LiveKnock.vcproj
+++ b/LiveKnock.vcproj
@@ -85,6 +85,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\cpp\c_9D18.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\cpp\crank.cpp"
 				>
 			</File>
