--- a/LiveKnock.vcproj
+++ b/LiveKnock.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="LiveKnock"
 	ProjectGUID="{AB9A6019-E9B2-45AE-83D4-26DD4067F158}"
 	RootNamespace="LiveKnock"
@@ -93,6 +93,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\cpp\EF07.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\cpp\ext_ram_vars.cpp"
 				>
 			</File>
@@ -173,6 +177,10 @@
 			</File>
 			<File
 				RelativePath=".\cpp\def.inc"
+				>
+			</File>
+			<File
+				RelativePath=".\cpp\EF07.h"
 				>
 			</File>
 			<File
