--- a/LiveKnock.vcproj
+++ b/LiveKnock.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="8,00"
 	Name="LiveKnock"
 	ProjectGUID="{AB9A6019-E9B2-45AE-83D4-26DD4067F158}"
 	RootNamespace="LiveKnock"
@@ -27,8 +27,8 @@
 				ReBuildCommandLine="make -h -a version=Debug"
 				CleanCommandLine="@del /Q .\Debug\*.*"
 				Output="$(ProjectDir)\LiveKnock.axf"
-				PreprocessorDefinitions="_DEBUG,__softfp="
-				IncludeSearchPath="$(ARMCC50INC);&quot;../LowLevel/libs/cpp&quot;;"
+				PreprocessorDefinitions="_DEBUG,DEF_SIMULATION,DEF_IGNITION_HOOKS,DEF_FU03_HOOKS"
+				IncludeSearchPath=""
 				ForcedIncludes=""
 				AssemblySearchPath=""
 				ForcedUsingAssemblies=""
@@ -47,8 +47,8 @@
 				ReBuildCommandLine="make -h -a version=Release"
 				CleanCommandLine="@del /Q .\Release\*.*"
 				Output="$(ProjectDir)\LiveKnock.axf"
-				PreprocessorDefinitions="__softfp="
-				IncludeSearchPath="$(ARMCC50INC);&quot;../LowLevel/libs/cpp&quot;;"
+				PreprocessorDefinitions="DEF_IGNITION_HOOKS,DEF_FU03_HOOKS"
+				IncludeSearchPath=""
 				ForcedIncludes=""
 				AssemblySearchPath=""
 				ForcedUsingAssemblies=""
