--- a/LiveKnock.vcproj
+++ b/LiveKnock.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="9.00"
 	Name="LiveKnock"
 	ProjectGUID="{AB9A6019-E9B2-45AE-83D4-26DD4067F158}"
 	RootNamespace="LiveKnock"
 	Keyword="MakeFileProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
